feat: add Google Analytics tracking and fix UI issues
- Add GA4 integration for user activity tracking
- Track daily and monthly active users
- Track 'Copy from Previous Month' feature usage
- Fix habit name column transparency and padding
- Fix text truncation in habit goals

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "lucide-react": "^0.508.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-ga4": "^2.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
